--- a/config/broot/conf.toml
+++ b/config/broot/conf.toml
@@ -109,11 +109,11 @@ execution = "$PAGER {file}"
 [skin]
 default = "rgb(216, 222, 233) rgb(46, 52, 64)"
 tree = "rgb(216, 222, 233) none"
-file = "gray(21) none"
-directory = "rgb(136, 192, 208) none bold"
-exe = "rgb(17, 164, 181) none"
-link = "Magenta none"
-pruning = "rgb(89, 73, 101) none Italic"
+file = "rgb(136, 192, 208) none underlined"
+directory = "rgb(129, 161, 193) none bold"
+exe = "rgb(143, 188, 187) none"
+link = "rgb(136, 192, 208) none"
+pruning = "rgb(76, 86, 106) none Italic"
 perm__ = "gray(5) None"
 perm_r = "ansi(94) None"
 perm_w = "ansi(132) None"
