config files change

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,9 +1,11 @@
 # Font configuration
-font_family mononoki regular
+font_family      Mononoki
+bold_font        auto
+italic_font      auto
 font_size 11.0
 
 # Transparent background
-background_opacity 0.95
+background_opacity 0.85
 
 allow_remote_control yes
 
