--- a/config/picom.conf
+++ b/config/picom.conf
@@ -12,7 +12,6 @@ shadow-offset-y = -15;
 shadow-opacity = 0.25;
 shadow-exclude = [
   "class_i = 'rofi'",
-  "class_g = 'Polybar'",
   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 #shadow-ignore-shaped = false;
@@ -24,7 +23,7 @@ fade-in-step = 0.09;
 fade-out-step = 0.06;
 
 opacity-rule = [
-  "80:class_g = 'Rofi'",
+  "70:class_g = 'Rofi'",
 ];
 
 # Other
@@ -37,32 +36,49 @@ unredir-if-possible = false;
 detect-transient = true;
 detect-client-leader = true;
 
+corner-radius = 15.0;
+rounded-corners-exclude = [
+  #"window_type = 'normal'",
+  "class_g = 'Rofi'",
+  "class_g = 'Polybar'",
+  "class_g = 'code-oss'",
+  #"class_g = 'TelegramDesktop'",
+  "class_g = 'Thunderbird'",
+];
+
 blur: {
-  method: "gaussian";
-  size: 20;
-  deviation: 10.0;
+  method = "kawase";
+  strength = 10;
+  background = false;
+  background-frame = false;
+  background-fixed = false;
 }
 
 wintypes: {
   dropdown_menu =
   {
     shadow = false;
+    blur = false;
   };
   popup_menu =
   {
     shadow = false;
+    blur = false;
   };
   menu =
   {
     shadow = false;
+    blur = false;
   };
   dnd =
   {
     shadow = false;
+    blur = false;
   };
   dock =
   {
     shadow = true;
+    blur = false;
   };
   tooltip =
   {
@@ -70,5 +86,6 @@ wintypes: {
     shadow = false;
     opacity = 0.85;
     focus = true;
+    blur = false;
   };
 };
