--- a/config/picom.conf
+++ b/config/picom.conf
@@ -53,32 +53,31 @@ blur: {
   background-frame = false;
   background-fixed = false;
 }
+blur-background-exclude = [
+    "window_type = 'dock'",
+    "window_type = 'desktop'",
+];
 
 wintypes: {
   dropdown_menu =
   {
     shadow = false;
-    blur = false;
   };
   popup_menu =
   {
     shadow = false;
-    blur = false;
   };
   menu =
   {
     shadow = false;
-    blur = false;
   };
   dnd =
   {
     shadow = false;
-    blur = false;
   };
   dock =
   {
-    shadow = true;
-    blur = false;
+    shadow = false;
   };
   tooltip =
   {
@@ -86,6 +85,5 @@ wintypes: {
     shadow = false;
     opacity = 0.85;
     focus = true;
-    blur = false;
   };
 };
