--- a/config/polybar/config
+++ b/config/polybar/config
@@ -1,8 +1,6 @@
-; ======
-; Colors
-; ======
 [colors]
-background = #2E3440
+background = 0
+;background = #2E3440
 foreground = #D8DEE9
 black      = #4C566A
 red        = #BF616A
@@ -14,73 +12,132 @@ cyan       = #8FBCBB
 white      = #D8DEE9
 orange     = #D08770
 
-; =======
-; Top Bar
-; =======
-[bar/top]
-; Size
-width  = 100%
-height = 24
+;------------;
+; TOPBAR    ;
+;------------;
 
-; Offset
-;offset-x = 50%
-;offset-y = 50%
+[bar/PolybarTop]
 
-; Position
-bottom = false
-
-; Radius
-radius = 0
-
-; Align modules fixed to middle
-fixed-center = true
-
-; Colors
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-; Underline
-line-size  = 4
-line-color = ${colors.white}
+width = 100%
+height = 24
 
-; Border
-border-size  = 0
+border-top-size = 5
+border-bottom-size = 5
+border-right-size = 10
+border-left-size = 10
 
-; Padding
-padding-left  = 0
-padding-right = 0
+bottom = false
 
-; Margin of modules
-module-margin-left  = 0
-module-margin-right = 0
+;-------;
+; FONTS ;
+;-------;
 
-; Font
-font-0 = Roboto:size=11;2
-font-1 = Fira Code:size=15;3
-font-2 = FontAwesome:size=15;1
+font-0 = "Ubuntu:style=Regular:size=14:antialias=true;3"
+font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=11;3"
+font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;3"
+font-3 = "Font Awesome 5 Brands:pixelsize=8;3"
 
-; Modlues
-modules-left   = ra5 ra3 bspwm ra1 ra3 ra4
-modules-center = la4 la3 la1 weather la3 la2 time ra2 ra3 date ra1 ra3 ra4
-modules-right  = la4 la3 la1 audio network la3 la5
+;---------------;
+; MISCELLANEOUS ;
+;---------------;
 
-; Cursor actions
-cursor-click  = pointer
-cursor-scroll = ns-resize
+fixed-center = true
+padding-left = 5
+padding-right = 5
+
+module-margin-left = 2
+module-margin-right = 2
+
+modules-left = pulseaudio
+modules-center = xwindow
+modules-right = date
+
+tray-position = right
+tray-padding = 10
+tray-detached = true
+tray-background = ${colors.background}
+tray-offset-x = -5%
+tray-maxsize = 24
 
 wm-restack = bspwm
 
-tray-position = right
-tray-background = ${colors.background}
-tray-detached = true
-tray-maxsize = 24
-tray-offset-x = -16%
+cursor-click = pointer
+cursor-scroll = ns-resize
 
-; ============
-; bspwm Module
-; ============
+;------------;
+; BOTBAR    ;
+;------------;
+
+[bar/PolybarBot]
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+width = 100%
+height = 24
+
+border-top-size = 5
+border-bottom-size = 10
+border-right-size = 10
+border-left-size = 10
+
+bottom = true
+
+;-------;
+; FONTS ;
+;-------;
+
+font-0 = "Ubuntu:style=Regular:size=12:antialias=true;3"
+font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=12;3"
+font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=12;3"
+font-3 = "Font Awesome 5 Brands:pixelsize=12;3"
+
+;---------------;
+; MISCELLANEOUS ;
+;---------------;
+
+fixed-center = true
+padding-left = 5
+padding-right = 5
+
+module-margin-left = 2
+module-margin-right = 2
+
+modules-left = bspwm
+modules-center =
+modules-right = filesystem memory cpu
+
+wm-restack = bspwm
+
+;---------;
+; MODULES ;
+;---------;
+
+[module/xwindow]
+type = internal/xwindow
+label = %title%
+label-maxlen = 80
+
+[module/filesystem]
+type = internal/fs
+interval = 25
+
+mount-0 = /
+
+label-mounted =  HD %mountpoint% %percentage_used%% of %total%
+label-unmounted = %mountpoint% not mounted
+
 [module/bspwm]
 type = internal/bspwm
+
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
 
 ; Mouse click
 enable-click = true
@@ -92,300 +149,85 @@ reverse-scroll = false
 format = <label-state><label-mode>
 
 ; Dimmed label
-label-dimmed         = %name%
+label-dimmed         = %icon%
 label-dimmed-padding = 2
 
 ; Focused label
-label-focused            = %name%
-label-focused-foreground = ${colors.blue}
-label-focused-background = ${colors.cyan}
+label-focused            = %icon%
 label-focused-padding    = 2
+label-focused-foreground = ${colors.blue}
+label-focused-underline  = ${colors.blue}
 
 ; Occupied label
-label-occupied            = ‣ %name%
-label-occupied-foreground = ${colors.black}
-label-occupied-background = ${colors.cyan}
+label-occupied            = %icon%
 label-occupied-padding    = 2
+label-occupied-foreground = ${colors.green}
 
 ; Empty labels
-label-empty            = %name%
-label-empty-foreground = ${colors.black}
-label-empty-background = ${colors.cyan}
+label-empty            = %icon%
 label-empty-padding    = 2
 
 ; Urgent labels
-label-urgent            = %name%
-label-urgent-foreground = ${colors.red}
-label-urgent-background = ${colors.cyan}
+label-urgent            = %icon%
 label-urgent-padding    = 2
+label-urgent-foreground = ${colors.red}
 
 label-monocle                   = "  "
-label-monocle-foreground        = ${colors.black}
-label-monocle-background        = ${colors.cyan}
+label-monocle-foreground        = ${colors.cyan}
 label-tiled                     = "  "
-label-tiled-foreground          = ${colors.black}
-label-tiled-background          = ${colors.cyan}
+label-tiled-foreground        = ${colors.cyan}
 label-fullscreen                = "  "
-label-fullscreen-foreground     = ${colors.black}
-label-fullscreen-background     = ${colors.cyan}
+label-fullscreen-foreground        = ${colors.cyan}
 label-floating                  = "  "
-label-floating-foreground       = ${colors.black}
-label-floating-background       = ${colors.cyan}
+label-floating-foreground        = ${colors.cyan}
 label-pseudotiled               = "  "
-label-pseudotiled-foreground    = ${colors.black}
-label-pseudotiled-background    = ${colors.cyan}
+label-pseudotiled-foreground        = ${colors.cyan}
 label-locked                    = "  "
-label-locked-foreground         = ${colors.black}
-label-locked-background         = ${colors.cyan}
+label-locked-foreground        = ${colors.cyan}
 label-sticky                    = "  "
-label-sticky-foreground         = ${colors.black}
-label-sticky-background         = ${colors.cyan}
+label-sticky-foreground        = ${colors.cyan}
 label-private                   =  "     "
-label-private-foreground        = ${colors.black}
-label-private-background        = ${colors.cyan}
+label-private-foreground        = ${colors.cyan}
 
-; ===========
-; Time Module
-; ===========
-[module/time]
-type = internal/date
+[module/cpu]
+type = internal/cpu
+interval = 2
+format-prefix = " CPU "
+label = %percentage:2%%
 
-; Update interval
-interval = 1.0
+[module/memory]
+type = internal/memory
+interval = 2
+format-prefix = " RAM "
+label = %percentage_used:2%%
 
-; Format
-time = %H:%M
-
-; Label
-label            = %time%
-label-foreground = ${colors.white}
-label-background = ${colors.blue}
-label-padding    = 2
-
-; ===========
-; Date Module
-; ===========
 [module/date]
 type = internal/date
+interval = 5
 
-; Update interval
-interval = 1.0
+date =
+date-alt = " %Y-%m-%d"
 
-; Format
-date = %A, %d
+time = %H:%M
+time-alt = %H:%M:%S
 
-; Label
-label            = %date%
-label-foreground = ${colors.black}
-label-background = ${colors.cyan}
-label-padding    = 2
+format-prefix = 
 
-; ==============
-; Weather Module
-; ==============
-[module/weather]
-type = custom/script
+label = %date% %time%
 
-; Script
-exec = /home/pavel/.config/polybar/scripts/weather.sh
-
-; Update interval
-interval = 2700
-
-; Label
-label            = %output%
-label-foreground = ${colors.black}
-label-background = ${colors.cyan}
-label-padding    = 2
-
-; ============
-; Audio Module
-; ============
-[module/audio]
+[module/pulseaudio]
 type = internal/pulseaudio
 
-; Volume label
-label-volume            = Volume: %percentage%%
-label-volume-foreground = ${colors.black}
-label-volume-background = ${colors.cyan}
-label-volume-padding    = 2
+format-volume =   <label-volume>
+label-volume = %percentage%%
 
-; Muted label
-label-muted            = Muted
-label-muted-foreground = ${colors.black}
-label-muted-background = ${colors.cyan}
-label-muted-padding    = 2
+label-muted =   muted
 
-; ==============
-; Network Module
-; ==============
-[module/network]
-type = internal/network
-
-; Interface
-interface = enp2s0
-
-; Connected label
-label-connected            = Download: %downspeed%
-label-connected-foreground = ${colors.black}
-label-connected-background = ${colors.cyan}
-label-connected-padding    = 2
-
-; Disconnected label
-label-disconnected            = Disconnected
-label-disconnected-foreground = ${colors.black}
-label-disconnected-background = ${colors.cyan}
-label-disconnected-padding    = 2
-
-; ===========
-; Lock Module
-; ===========
-[module/lock]
-type = custom/text
-
-; Label
-content            = Lock
-content-foreground = ${colors.white}
-content-background = ${colors.blue}
-content-padding    = 2
-
-; Mouse click
-click-left = slock
-
-; =============
-; Logout Module
-; =============
-[module/logout]
-type = custom/text
-
-; Label
-content            = Logout
-content-foreground = ${colors.white}
-content-background = ${colors.blue}
-content-padding    = 2
-
-; Mouse click
-click-left = bspc quit
-
-; ===============
-; Poweroff Module
-; ===============
-[module/poweroff]
-type = custom/text
-
-; Label
-content            = Poweroff
-content-foreground = ${colors.white}
-content-background = ${colors.blue}
-content-padding    = 2
-
-; Mouse click
-click-left = poweroff
-
-; ======
-; Arrows
-; ======
-[module/la1]
-type = custom/text
-
-; Label
-content            = %{T2}%{T-}
-content-foreground = ${colors.cyan}
-content-background = ${colors.background}
-
-[module/la2]
-type = custom/text
-
-; Label
-content            = %{T2}%{T-}
-content-foreground = ${colors.blue}
-content-background = ${colors.background}
-
-[module/la3]
-type = custom/text
-
-; Label
-content            = %{T2}%{T-}
-content-foreground = ${colors.background}
-content-background = ${colors.cyan}
-
-[module/la4]
-type = custom/text
-
-; Label
-content            = %{T2}%{T-}
-content-foreground = ${colors.cyan}
-content-background = ${colors.background}
-
-[module/la5]
-type = custom/text
-
-; Label
-content            = %{T2}%{T-}
-content-foreground = ${colors.red}
-content-background = ${colors.background}
-
-[module/la6]
-type = custom/text
-
-; Label
-content            = %{T2}%{T-}
-content-foreground = ${colors.background}
-content-background = ${colors.blue}
-
-[module/ra1]
-type = custom/text
-
-; Label
-content            = %{T2}%{T-}
-content-foreground = ${colors.cyan}
-content-background = ${colors.background}
-
-[module/ra2]
-type = custom/text
-
-; Label
-content            = %{T2}%{T-}
-content-foreground = ${colors.blue}
-content-background = ${colors.background}
-
-[module/ra3]
-type = custom/text
-
-; Label
-content            = %{T2}%{T-}
-content-foreground = ${colors.background}
-content-background = ${colors.cyan}
-
-[module/ra4]
-type = custom/text
-
-; Label
-content            = %{T2}%{T-}
-content-foreground = ${colors.cyan}
-content-background = ${colors.background}
-
-[module/ra5]
-type = custom/text
-
-; Label
-content            = %{T2}%{T-}
-content-foreground = ${colors.red}
-content-background = ${colors.background}
-
-; =====
-; Other
-; =====
 [settings]
-screenchange-reload     = true
-;compositing-background = xor
-;compositing-foreground = source
-;compositing-border     = over
-pseudo-transparency     = true
+screenchange-reload = true
 
-; ==
-; WM
-; ==
 [global/wm]
-margin-top    = 0
-margin-bottom = 0
+margin-top = 2
+margin-bottom = 2
+
+; vim:ft=dosini
