--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,11 +1,12 @@
 # Font configuration
-font_family      Mononoki
+font_family      mononoki
 bold_font        auto
 italic_font      auto
+bold_italic_font auto
 font_size 11.0
 
 # Transparent background
-background_opacity 0.85
+background_opacity 0.70
 
 allow_remote_control yes
 
