--- a/config/picom.conf
+++ b/config/picom.conf
@@ -1,5 +1,4 @@
 backend = "glx";
-glx-no-stencil = true;
 
 xrender-sync-fence = true;
 vsync = true;
@@ -14,7 +13,6 @@ shadow-exclude = [
   "class_i = 'rofi'",
   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
-#shadow-ignore-shaped = false;
 
 # Fading
 fading = true;
@@ -23,7 +21,7 @@ fade-in-step = 0.09;
 fade-out-step = 0.06;
 
 opacity-rule = [
-  "70:class_g = 'Rofi'",
+  "85:class_g = 'Rofi'",
 ];
 
 # Other
@@ -54,8 +52,10 @@ blur: {
   background-fixed = false;
 }
 blur-background-exclude = [
-    "window_type = 'dock'",
-    "window_type = 'desktop'",
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  "class_g = 'Rofi'",
+  "class_g = 'Firefox'",
 ];
 
 wintypes: {
