--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,12 +1,9 @@
 # Font configuration
-font_family      mononoki
+font_family      Hack
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 font_size 11.0
-
-# Transparent background
-background_opacity 0.70
 
 allow_remote_control yes
 
