--- a/config/picom.conf
+++ b/config/picom.conf
@@ -6,11 +6,10 @@ vsync = true;
 # Shadows
 shadow = true;
 shadow-radius = 10;
-shadow-offset-x = -15;
-shadow-offset-y = -15;
+shadow-offset-x = 0;
+shadow-offset-y = 0;
 shadow-opacity = 0.25;
 shadow-exclude = [
-  "class_i = 'rofi'",
   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
@@ -21,7 +20,7 @@ fade-in-step = 0.09;
 fade-out-step = 0.06;
 
 opacity-rule = [
-  "85:class_g = 'Rofi'",
+#  "85:class_g = 'Rofi'",
 ];
 
 # Other
@@ -38,6 +37,7 @@ corner-radius = 15.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'Rofi'",
+  "window_type = 'dock'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   #"class_g = 'TelegramDesktop'",
@@ -56,6 +56,7 @@ blur-background-exclude = [
   "window_type = 'desktop'",
   "class_g = 'Rofi'",
   "class_g = 'Firefox'",
+  "class_g = 'maim'",
 ];
 
 wintypes: {
@@ -77,7 +78,7 @@ wintypes: {
   };
   dock =
   {
-    shadow = false;
+    shadow = true;
   };
   tooltip =
   {
