--- a/config/polybar/config
+++ b/config/polybar/config
@@ -1,6 +1,5 @@
 [colors]
-background = 0
-;background = #2E3440
+background = #2E3440
 foreground = #D8DEE9
 black      = #4C566A
 red        = #BF616A
@@ -22,12 +21,7 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 
 width = 100%
-height = 24
-
-border-top-size = 3
-border-bottom-size = 3
-border-right-size = 10
-border-left-size = 10
+height = 28
 
 bottom = false
 
@@ -35,23 +29,22 @@ bottom = false
 ; FONTS ;
 ;-------;
 
-font-0 = "Ubuntu:style=Regular:size=13:antialias=true;3"
-font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=11;3"
-font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;3"
-font-3 = "Font Awesome 5 Brands:pixelsize=8;3"
+font-0 = "Inter:style=Medium:size=13:antialias=true;3"
+font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=13;3"
+font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=13;3"
+font-3 = "Font Awesome 5 Brands:pixelsize=13;3"
 
 ;---------------;
 ; MISCELLANEOUS ;
 ;---------------;
 
 fixed-center = true
-padding-left = 5
-padding-right = 5
+padding-left = 2
+padding-right = 2
 
-module-margin-left = 2
-module-margin-right = 2
+module-margin = 2
 
-modules-left = pulseaudio
+modules-left = bspwm
 modules-center = xwindow
 modules-right = date
 
@@ -59,58 +52,13 @@ tray-position = right
 tray-padding = 10
 tray-detached = true
 tray-background = ${colors.background}
-tray-offset-x = -5%
+tray-offset-x = -4%
 tray-maxsize = 24
 
 wm-restack = bspwm
 
 cursor-click = pointer
 cursor-scroll = ns-resize
-
-;------------;
-; BOTBAR    ;
-;------------;
-
-[bar/PolybarBot]
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-width = 100%
-height = 24
-
-border-top-size = 3
-border-bottom-size = 5
-border-right-size = 10
-border-left-size = 10
-
-bottom = true
-
-;-------;
-; FONTS ;
-;-------;
-
-font-0 = "Ubuntu:style=Regular:size=12:antialias=true;3"
-font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=12;3"
-font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=12;3"
-font-3 = "Font Awesome 5 Brands:pixelsize=12;3"
-
-;---------------;
-; MISCELLANEOUS ;
-;---------------;
-
-fixed-center = true
-padding-left = 5
-padding-right = 5
-
-module-margin-left = 2
-module-margin-right = 2
-
-modules-left = bspwm
-modules-center =
-modules-right = filesystem memory cpu
-
-wm-restack = bspwm
 
 ;---------;
 ; MODULES ;
@@ -120,15 +68,6 @@ wm-restack = bspwm
 type = internal/xwindow
 label = %title%
 label-maxlen = 80
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted =  HD %mountpoint% %percentage_used%% of %total%
-label-unmounted = %mountpoint% not mounted
 
 [module/bspwm]
 type = internal/bspwm
@@ -146,7 +85,7 @@ enable-click = true
 enable-scroll  = false
 reverse-scroll = false
 
-format = <label-state><label-mode>
+format = <label-state> <label-mode>
 
 ; Dimmed label
 label-dimmed         = %icon%
@@ -175,53 +114,39 @@ label-urgent-foreground = ${colors.red}
 label-monocle                   = "  "
 label-monocle-foreground        = ${colors.cyan}
 label-tiled                     = "  "
-label-tiled-foreground        = ${colors.cyan}
+label-tiled-foreground          = ${colors.cyan}
 label-fullscreen                = "  "
-label-fullscreen-foreground        = ${colors.cyan}
+label-fullscreen-foreground     = ${colors.cyan}
 label-floating                  = "  "
-label-floating-foreground        = ${colors.cyan}
+label-floating-foreground       = ${colors.cyan}
 label-pseudotiled               = "  "
-label-pseudotiled-foreground        = ${colors.cyan}
+label-pseudotiled-foreground    = ${colors.cyan}
 label-locked                    = "  "
-label-locked-foreground        = ${colors.cyan}
+label-locked-foreground         = ${colors.cyan}
 label-sticky                    = "  "
-label-sticky-foreground        = ${colors.cyan}
+label-sticky-foreground         = ${colors.cyan}
 label-private                   =  "     "
 label-private-foreground        = ${colors.cyan}
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = " CPU "
-label = %percentage:2%%
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = " RAM "
-label = %percentage_used:2%%
 
 [module/date]
 type = internal/date
 interval = 5
 
-date =
-date-alt = " %Y-%m-%d"
-
 time = %H:%M
-time-alt = %H:%M:%S
 
 format-prefix = 
 
-label = %date% %time%
+label = %time:6%
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume =   <label-volume>
-label-volume = %percentage%%
+format-volume = <ramp-volume>
 
-label-muted =   muted
+ramp-volume-0 = 
+ramp-volume-1 = 
+
+label-muted = 
 
 [settings]
 screenchange-reload = true
