exclude maim,rofi and popup windows from blur

--- a/config/picom.conf
+++ b/config/picom.conf
@@ -53,10 +53,12 @@ blur: {
 }
 blur-background-exclude = [
   "window_type = 'dock'",
+  "window_type = 'popup_menu'",
   "window_type = 'desktop'",
   "class_g = 'Rofi'",
   "class_g = 'Firefox'",
-  "class_g = 'maim'",
+  "class_g = 'Dunst'",
+  "class_g = 'slop'",
 ];
 
 wintypes: {
