--- a/config/picom.conf
+++ b/config/picom.conf
@@ -40,7 +40,7 @@ rounded-corners-exclude = [
   "window_type = 'dock'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
-  #"class_g = 'TelegramDesktop'",
+  "class_g = 'TelegramDesktop'",
   "class_g = 'Thunderbird'",
 ];
 
@@ -52,6 +52,7 @@ blur: {
   background-fixed = false;
 }
 blur-background-exclude = [
+  "class_g = 'TelegramDesktop'",
   "window_type = 'dock'",
   "window_type = 'popup_menu'",
   "window_type = 'desktop'",
