Fix zoom shadowing and blurring, change font in doom emacs

--- a/config/picom.conf
+++ b/config/picom.conf
@@ -10,7 +10,8 @@ shadow-offset-x = 0;
 shadow-offset-y = 0;
 shadow-opacity = 0.25;
 shadow-exclude = [
-  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+  "name = 'cpt_frame_window'"
 ];
 
 # Fading
@@ -45,7 +46,7 @@ rounded-corners-exclude = [
 ];
 
 blur: {
-  method = "kawase";
+  method = "dual_kawase";
   strength = 10;
   background = false;
   background-frame = false;
@@ -53,10 +54,12 @@ blur: {
 }
 blur-background-exclude = [
   "class_g = 'TelegramDesktop'",
+  "name = 'cpt_frame_window'",
   "window_type = 'dock'",
   "window_type = 'popup_menu'",
   "window_type = 'desktop'",
   "class_g = 'Rofi'",
+  "class_g = 'zoom'",
   "class_g = 'Firefox'",
   "class_g = 'Dunst'",
   "class_g = 'slop'",
