--- a/config/picom.conf
+++ b/config/picom.conf
@@ -1,17 +1,20 @@
 backend = "glx";
 
-xrender-sync-fence = true;
-vsync = true;
-
 # Shadows
 shadow = true;
-shadow-radius = 10;
-shadow-offset-x = 0;
-shadow-offset-y = 0;
-shadow-opacity = 0.25;
+shadow-radius = 15;
+shadow-offset-x = -12;
+shadow-offset-y = -6;
+shadow-opacity = 0.3;
 shadow-exclude = [
   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-  "name = 'cpt_frame_window'"
+  "name = 'cpt_frame_window'",
+  "class_g = 'Bspwm'",
+];
+
+# This windows considered always focused
+focus-exclude = [
+  "name *= 'rofi'",
 ];
 
 # Fading
@@ -24,27 +27,22 @@ opacity-rule = [
 #  "85:class_g = 'Rofi'",
 ];
 
-# Other
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
-use-ewmh-active-win = true;
-detect-client-opacity = true;
-dbe = false;
-unredir-if-possible = false;
-detect-transient = true;
-detect-client-leader = true;
-
+# Rounded corners
 corner-radius = 15.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
-  "class_g = 'Rofi'",
+  "name = 'cpt_frame_window'",
   "window_type = 'dock'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   "class_g = 'TelegramDesktop'",
   "class_g = 'Thunderbird'",
+  "class_g = 'Bspwm'",
+  "! name~=''",
 ];
+round-borders = 1;
 
+# Blur settings
 blur: {
   method = "dual_kawase";
   strength = 10;
@@ -63,7 +61,20 @@ blur-background-exclude = [
   "class_g = 'Firefox'",
   "class_g = 'Dunst'",
   "class_g = 'slop'",
+  "class_g = 'Bspwm'",
+  "! name~=''",
 ];
+
+# Other
+vsync = true;
+mark-wmwin-focused = true;
+mark-ovredir-focused = true;
+use-ewmh-active-win = true;
+detect-client-opacity = true;
+dbe = false;
+unredir-if-possible = false;
+detect-transient = true;
+detect-client-leader = true;
 
 wintypes: {
   dropdown_menu =
@@ -72,7 +83,7 @@ wintypes: {
   };
   popup_menu =
   {
-    shadow = false;
+    shadow = true;
   };
   menu =
   {
@@ -94,3 +105,4 @@ wintypes: {
     focus = true;
   };
 };
+# vim: ft=cfg
