Change mpd configs

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -1,6 +1,8 @@
 profile=gpu-hq
 scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
-video-sync=display-resample
+#video-sync=display-resample
+hwdec=auto-safe
 interpolation
 tscale=oversample
+audio-spdif=ac3,eac3,dts-hd,truehd
