--- a/config/ncmpcpp/config
+++ b/config/ncmpcpp/config
@@ -3,34 +3,57 @@ lyrics_directory = ~/.config/lyrics
 mpd_music_dir = "~/Music"
 visualizer_type = spectrum
 message_delay_time = 1
+autocenter_mode = "yes"
+external_editor = helix
+use_console_editor = yes
 
-song_list_format = {$4%a - }{%t}|{$8%f$9}$R{$3(%l)$9}
-song_status_format = $b{{$8"%t"}} $3by {$4%a{ $3in $7%b{ (%y)}} $3}|{$8%f}
-song_library_format = {%n - }{%t}|{%f}
-alternative_header_first_line_format = $b$1$aqqu$/a$9 {%t}|{%f} $1$atqq$/a$9$/b
-alternative_header_second_line_format = {{$4$b%a$/b$9}{ - $7%b$9}{ ($4%y$9)}}|{%D}
-current_item_prefix = $(cyan)$r$b
-current_item_suffix = $/r$(end)$/b
-current_item_inactive_column_prefix = $(magenta)$r
-current_item_inactive_column_suffix = $/r$(end)
-
-execute_on_song_change = "cover.sh extract"
-playlist_display_mode = columns
-browser_display_mode = columns
-progressbar_look = ->
-media_library_primary_tag = album_artist
-media_library_albums_split_by_date = no
-startup_screen = playlist
+colors_enabled = "yes"
+playlist_display_mode = "columns"
 user_interface = "alternative"
-display_volume_level = no
-ignore_leading_the = yes
+statusbar_visibility = "no"
+header_visibility = "no"
+titles_visibility = "no"
+browser_display_mode = "columns"
+search_engine_display_mode = "columns"
+playlist_editor_display_mode = "columns"
+display_bitrate = "no"
+display_remaining_time = "no"
 
-external_editor = emacs
-use_console_editor = no
+progressbar_look = ->
+progressbar_color = "black"
+progressbar_elapsed_color = "blue"
 
-empty_tag_color = magenta
-main_window_color = white
-progressbar_color = black:b
-progressbar_elapsed_color = blue:b
-statusbar_color = red
-statusbar_time_color = cyan:b
+now_playing_prefix = "$b"
+now_playing_suffix = "$/b"
+song_status_format = "$b$5%f$/b {$8by} $b$6%l$8$/b"
+
+song_columns_list_format = "(40)[cyan]{f} (7f)[green]{l}"
+
+song_list_format = "{%f}$R{%l}"
+
+main_window_color = "cyan"
+
+alternative_header_second_line_format =
+
+# song_list_format = {$4%a - }{%t}|{$8%f$9}$R{$3(%l)$9}
+# song_status_format = $b{{$8"%t"}} $3by {$4%a{ $3in $7%b{ (%y)}} $3}|{$8%f}
+# song_library_format = {%n - }{%t}|{%f}
+# alternative_header_first_line_format = $b$1$aqqu$/a$9 {%t}|{%f} $1$atqq$/a$9$/b
+# alternative_header_second_line_format = {{$4$b%a$/b$9}{ - $7%b$9}{ ($4%y$9)}}|{%D}
+# current_item_prefix = $(cyan)$r$b
+# current_item_suffix = $/r$(end)$/b
+# current_item_inactive_column_prefix = $(magenta)$r
+# current_item_inactive_column_suffix = $/r$(end)
+# execute_on_song_change = "cover.sh extract"
+# media_library_primary_tag = album_artist
+# media_library_albums_split_by_date = no
+# startup_screen = playlist
+# user_interface = "alternative"
+# display_volume_level = no
+# ignore_leading_the = yes
+# empty_tag_color = magenta
+# main_window_color = white
+# progressbar_color = black:b
+# progressbar_elapsed_color = blue:b
+# statusbar_color = red
+# statusbar_time_color = cyan:b
