--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -5,22 +5,21 @@ monitor=desc:BNQ BenQ EW3270U 82M01039019,3840x2160@60,1536x0,1.5
 monitor=,preferred,auto,auto
 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP DISPLAY XAUTHORITY
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP DISPLAY XAUTHORITY
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP DISPLAY XAUTHORITY QT_QPA_PLATFORMTHEME
 exec-once = ~/.config/hypr/scripts/launch_portals
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = systemctl --user restart pipewire
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dunst
-exec-once = pypr
 exec-once = hyprpaper
 exec-once = xsettingsd -c ~/.config/xsettingsd/xsettingsd.conf
-exec-once = emacs --fg-daemon
 exec-once = ~/.local/bin/system-panel-rs
+exec-once = emacs --fg-daemon
 
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,capitaine-cursors-light 24
 env = GDK_SCALE,2
 
-source = ./dracula.conf
+source = ./catpuchin.conf
 
 input {
     kb_layout = us,ru
@@ -111,7 +110,7 @@ bind = $mainMod, r, exec, wofi --show run -i
 
 bind = $mainMod, v, exec, $terminal -e vifm ~
 bind = $mainMod, b, exec, $brouser
-bind = $mainMod, m, exec, evolution
+bind = $mainMod, m, exec, thunderbird
 bind = $mainMod, x, exec, flatpak run org.telegram.desktop
 
 # Emacs
