--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -4,5 +4,6 @@ cscale=ewa_lanczossharp
 #video-sync=display-resample
 hwdec=auto-safe
 interpolation
+video-sync=display-resample
 tscale=oversample
 audio-spdif=ac3,eac3,dts-hd,truehd
