--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -1,9 +1,31 @@
-profile=gpu-hq
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
-#video-sync=display-resample
 hwdec=auto-safe
-interpolation
+vo=gpu-next
+gpu-api=vulkan
+
+profile=high-quality
 video-sync=display-resample
+interpolation
 tscale=oversample
 audio-spdif=ac3,eac3,dts-hd,truehd
+
+target-prim=auto
+# target-prim=bt.709 # target Rec.709 for SDR TVs
+# target-prim=bt.2020 # target Rec.2020 (wide color gamut) for HDR TVs
+target-trc=auto
+vf=format=colorlevels=full:colormatrix=auto
+video-output-levels=full
+
+scale-antiring=0.6
+
+glsl-shader="~/.config/mpv/shaders/CfL_Prediction.glsl"
+
+[protocol.http]
+hls-bitrate=max # use max quality for HLS streams
+cache=yes
+no-cache-pause # don't pause when the cache runs low
+
+[protocol.https]
+profile=protocol.http
+
+[protocol.ytdl]
+profile=protocol.http
